# 2025-opensw-folder-image-batch-converter

./: .gitignore  README.md  pyproject.toml
examples/: demo_image_ops.py  folder_copy_basic.py
img_batch/: __init__.py  io_utils.py  main.py  ops.py
